--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -1,5 +1,15 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
-{{ partialCached "head/css.html" . }}
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width" />
+<title>
+  {{ if .IsHome }}
+    {{ site.Title }}
+  {{ else }}
+    {{ printf "%s | %s" .Title site.Title }}
+  {{ end }}
+
+</title>
+
+{{- with (templates.Defer (dict "key" "global")) }}
+  {{- partial "head/css.html" . }}
+{{- end }}
 {{ partialCached "head/js.html" . }}
