fix(icon): Ensure default class is set for icon component

--- a/layouts/_partials/ui/icon.html
+++ b/layouts/_partials/ui/icon.html
@@ -17,8 +17,9 @@
 */}}
 
 {{- $customClass := "ks-icon" }}
+
 {{- $name := .name -}}
-{{- $class := .class -}}
+{{- $class := .class | default "" -}}
 {{- $finalClass := $customClass -}}
 {{- with $class -}}
   {{- $finalClass = printf "%s %s" $customClass . -}}
