--- a/layouts/_partials/head/css.html
+++ b/layouts/_partials/head/css.html
@@ -5,12 +5,7 @@
       <link rel="stylesheet" href="{{ .RelPermalink }}" />
     {{- else }}
       {{- with . | fingerprint }}
-        <link
-          rel="stylesheet"
-          href="{{ .RelPermalink }}"
-          integrity="{{ .Data.Integrity }}"
-          crossorigin="anonymous"
-        />
+        <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
       {{- end }}
     {{- end }}
   {{- end }}
