--- a/layouts/_partials/ui/head/js.html
+++ b/layouts/_partials/ui/head/js.html
@@ -3,14 +3,24 @@
     "minify" (not hugo.IsDevelopment)
     "sourceMap" (cond hugo.IsDevelopment "external" "")
     "targetPath" "js/main.js"
+    "format" "esm"
   }}
   {{- with . | js.Build $opts }}
     {{- if hugo.IsDevelopment }}
-      <script src="{{ .RelPermalink }}"></script>
+      <script type="module" src="{{ .RelPermalink }}"></script>
     {{- else }}
       {{- with . | fingerprint }}
-        <script src="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous"></script>
+        <script
+          type="module"
+          src="{{ .RelPermalink }}"
+          integrity="{{ .Data.Integrity }}"
+          crossorigin="anonymous"
+        ></script>
       {{- end }}
     {{- end }}
   {{- end }}
+{{- else }}
+  <script>
+    console.error('Keystone UI: main.js not found');
+  </script>
 {{- end }}
