--- a/layouts/page.html
+++ b/layouts/page.html
@@ -5,6 +5,6 @@
   {{ $dateHuman := .Date | time.Format ":date_long" }}
   <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
 
-  <div class="content">{{ .Content }}</div>
+  <div class="ks-prose">{{ .Content }}</div>
   {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
 {{ end }}
