--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
-  {{ .Content }}
+  <div class="ks-prose">{{ .Content }}</div>
   {{ range site.RegularPages }}
     <section>
       <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
